# gurrt

./: .gitignore  LICENSE  README.md  REFACTOR_SESSION.md  main.py  pyproject.toml
app/: llm.py  prompts.py  vector_db.py
experiment/: audio_asr.ipynb  docling.ipynb  prompting_analysis.ipynb  query_decoupling.py  query_rewrite.ipynb  query_search.py  scene_detection.ipynb  ssim_scene_detection.ipynb  test.ipynb  test.py  vlms_tryouts.ipynb
scripts/: asr_pipeline.py  audio_asr.py  collection_query.py  collections_formation.py  collections_query.py  framesampling_clip.py  model_storage.py  query_search.py  sampling_frames.py  video_embedding_pipeline.py
src/gurrt/api/: server.py
src/gurrt/app/: __init__.py  gurrt_gui.py
src/gurrt/cli/: main.py  mm.py  ui.py
src/gurrt/config/: config.py
src/gurrt/core/: asr.py  embedding.py  llm.py  models.py  pipeline.py  prompts.py  search.py  vectordb.py
src/gurrt/utils/: llama_server_utils.py  utils.py
src/videorag/api/: server.py
src/videorag/cli/: main.py
src/videorag/config/: config.py
src/videorag/core/: asr.py  embedding.py  llm.py  models.py  pipeline.py  prompts.py  search.py  vectordb.py
src/videorag/utils/: utils.py
trash/: BLIP.ipynb  collections_formation.py  surveilens_clustering_v2.ipynb
utils/: utils.py
